Fix navbar collapsed colors

--- a/scss/bootstrap/_navbar.scss
+++ b/scss/bootstrap/_navbar.scss
@@ -469,7 +469,7 @@
       // Dropdowns get custom display when collapsed
       .open .dropdown-menu {
         > li > a {
-          color: $navbar-default-link-color;
+          color: $darkOrange;
           &:hover,
           &:focus {
             //color: $navbar-default-link-hover-color;
